Fix - IE 11 share icon height so fixed icons align correctly.

--- a/web/themes/custom/hm-public-theme/static/sass/content/_content.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/content/_content.scss
@@ -56,6 +56,10 @@ p img {
   height: auto;
   width: em(30);
 
+  @media screen and (min-width:0\0) {
+    height: em(30);
+  }  
+
   @media screen and (max-width: 1024px) {
     width: em(36);
   }
